--- a/README
+++ b/README
@@ -1,22 +1,22 @@
-JWT Authentication and Authorisation
-Authentication and Authorization module
+# JWT Authentication and Authorisation
+# Authentication and Authorization module
 
 Spring Version: 3.0.1
 
 Java Version: 17
 
 Dependencies:
-    - spring-boot-starter-data-jpa
-    - spring-boot-starter-security
-    - spring-boot-starter-web
-    - spring-boot-starter-test
-    - spring-security-test
-    - lombok
-    - jjwt-api (0.11.5)
-    - jjwt-impl (0.11.5)
-    - jjwt-jackson (0.11.5)
-    - springdoc-openapi-starter-webmvc-ui (2.0.2)
-    - hibernate-validator (8.0.0.Final)
+- spring-boot-starter-data-jpa
+- spring-boot-starter-security
+- spring-boot-starter-web
+- spring-boot-starter-test
+- spring-security-test
+- lombok
+- jjwt-api (0.11.5)
+- jjwt-impl (0.11.5)
+- jjwt-jackson (0.11.5)
+- springdoc-openapi-starter-webmvc-ui (2.0.2)
+- hibernate-validator (8.0.0.Final)
 
 Classes:
 
